--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.1.0",
+    "@react-google-maps/api": "^2.5.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -13,6 +14,8 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
+    "chart.js": "^3.6.0",
+    "dotenv": "^8.2.0",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
@@ -23,6 +26,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
     "typescript": "^4.4.4",
+    "use-places-autocomplete": "^1.10.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
