--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "chart.js": "^3.6.0",
+    "chartjs-plugin-zoom": "^1.1.1",
     "dotenv": "^8.2.0",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
@@ -22,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
