--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://wojciechszutryk.github.io/RinexCharts/",
   "name": "app",
   "version": "0.1.0",
   "private": true,
@@ -18,6 +19,7 @@
     "chart.js": "^3.6.0",
     "chartjs-plugin-zoom": "^1.1.1",
     "dotenv": "^8.2.0",
+    "gh-pages": "^3.2.3",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
@@ -33,6 +35,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
