--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.1.1",
+    "@mui/lab": "^5.0.0-alpha.55",
     "@mui/material": "^5.1.0",
     "@mui/styles": "^5.1.0",
     "@react-google-maps/api": "^2.5.0",
@@ -18,6 +20,7 @@
     "@types/react-dom": "^17.0.11",
     "chart.js": "^3.6.0",
     "chartjs-plugin-zoom": "^1.1.1",
+    "date-fns": "^2.26.0",
     "dotenv": "^8.2.0",
     "gh-pages": "^3.2.3",
     "prettier": "^2.4.1",
@@ -59,5 +62,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-toastify": "^8.1.0"
   }
 }
