--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
+    "@types/mathjs": "^9.4.2",
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
@@ -25,6 +26,7 @@
     "dotenv": "^8.2.0",
     "gh-pages": "^3.2.3",
     "leaflet": "^1.7.1",
+    "mathjs": "^10.0.0",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
