--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.2",
     "react-redux": "^7.2.6",
@@ -62,6 +63,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/react-csv": "^1.1.2",
     "chokidar": "^3.5.2",
     "react-toastify": "^8.1.0"
   }
