--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "redux": "^4.1.2",
