--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,3 @@
-{
-  "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "baseUrl": "src"
-  },
-  "include": [
-    "src"
-  ]
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:56a4fad7c6a21cd1e32796931c1141697791b87b8553c194bc33190567f9dc55
+size 557
