--- a/package.json
+++ b/package.json
@@ -1,3 +1,71 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:7f88b512b5fc6d83be43ae4f5a7002fd4871eec6892cc8c2f0db406b70aecbed
-size 2032
+{
+  "homepage": ".",
+  "name": "app",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@arction/lcjs": "^3.2.0",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.1.1",
+    "@mui/lab": "^5.0.0-alpha.55",
+    "@mui/material": "^5.1.0",
+    "@mui/styles": "^5.1.0",
+    "@react-google-maps/api": "^2.5.0",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/mathjs": "^9.4.2",
+    "@types/node": "^12.20.37",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11",
+    "chart.js": "^3.6.0",
+    "chartjs-plugin-zoom": "^1.1.1",
+    "date-fns": "^2.26.0",
+    "dotenv": "^8.2.0",
+    "gh-pages": "^3.2.3",
+    "leaflet": "^1.7.1",
+    "mathjs": "^10.0.0",
+    "prettier": "^2.4.1",
+    "react": "^17.0.2",
+    "react-chartjs-2": "^3.3.0",
+    "react-csv": "^2.2.2",
+    "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.0",
+    "typescript": "^4.4.4",
+    "use-places-autocomplete": "^1.10.0",
+    "web-vitals": "^1.1.2"
+  },
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "rimraf ./build && react-scripts --expose-gc start",
+    "build": "react-scripts --max_old_space_size=4096 build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
+  "devDependencies": {
+    "@types/react-csv": "^1.1.2",
+    "chokidar": "^3.5.2",
+    "react-toastify": "^8.1.0"
+  }
+}
