--- a/package.json
+++ b/package.json
@@ -15,18 +15,11 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/mathjs": "^9.4.2",
-    "@types/node": "^12.20.37",
-    "@types/react": "^17.0.34",
-    "@types/react-dom": "^17.0.11",
     "chart.js": "^3.6.0",
     "chartjs-plugin-zoom": "^1.1.1",
     "date-fns": "^2.26.0",
     "dotenv": "^8.2.0",
-    "gh-pages": "^3.2.3",
     "leaflet": "^1.7.1",
-    "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-csv": "^2.2.2",
@@ -39,8 +32,9 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
-    "typescript": "^4.4.4",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "chokidar": "^3.5.2",
+    "react-toastify": "^8.1.0"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -62,8 +56,14 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "gh-pages": "^3.2.3",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4",
     "@types/react-csv": "^1.1.2",
-    "chokidar": "^3.5.2",
-    "react-toastify": "^8.1.0"
+    "@types/jest": "^26.0.24",
+    "@types/mathjs": "^9.4.2",
+    "@types/node": "^12.20.37",
+    "@types/react": "^17.0.34",
+    "@types/react-dom": "^17.0.11"
   }
 }
