--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mui/icons-material": "^5.1.1",
-    "@mui/lab": "^5.0.0-alpha.55",
     "@mui/material": "^5.1.0",
     "@mui/styles": "^5.1.0",
+    "@mui/x-date-pickers": "^6.0.4",
     "@react-google-maps/api": "^2.5.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "chart.js": "^3.6.0",
     "chartjs-plugin-zoom": "^1.1.1",
+    "chokidar": "^3.5.2",
     "date-fns": "^2.26.0",
+    "dayjs": "^1.11.7",
     "dotenv": "^8.2.0",
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
@@ -29,12 +31,11 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
+    "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.0",
-    "web-vitals": "^1.1.2",
-    "chokidar": "^3.5.2",
-    "react-toastify": "^8.1.0"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -56,14 +57,14 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^3.2.3",
-    "prettier": "^2.4.1",
-    "typescript": "^4.4.4",
-    "@types/react-csv": "^1.1.2",
     "@types/jest": "^26.0.24",
     "@types/mathjs": "^9.4.2",
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.34",
-    "@types/react-dom": "^17.0.11"
+    "@types/react-csv": "^1.1.2",
+    "@types/react-dom": "^17.0.11",
+    "gh-pages": "^3.2.3",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4"
   }
 }
