--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^1.3.4",
     "chart.js": "^3.6.0",
     "chartjs-plugin-zoom": "^1.1.1",
     "chokidar": "^3.5.2",
